--- a/index.html
+++ b/index.html
@@ -371,18 +371,13 @@
         <span data-lang="zh">开始新的分析</span>
       </button>
     </div>
-    <div class="notice">
-      <span data-lang="en">Tip: After a few messages, type <b>"Give me my MBTI"</b>.</span>
-      <span data-lang="vi">Mẹo: Sau vài tin nhắn, hãy gõ <b>"Hãy cho tôi MBTI"</b>.</span>
-      <span data-lang="zh">提示：交流几句后输入 <b>“给我我的 MBTI”</b>。</span>
-    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <script>
     // --- 1. Supabase Project Configuration ---
-    const supa_url = 'https://okbqkkfmtdxazdfkiovjj.supabase.co';
+    const supa_url = 'https://okbqkkftdxazdfkiovjj.supabase.co';
     const supa_anon_key = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9rYnFra2Z0ZHhhemRma2lvdmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxNDUxOTEsImV4cCI6MjA3MDcyMTE5MX0.SvYI1lxJP-dzEK5j1xGNdJu-pNtWEzVm7S2wnQBMY9c';
     const supabaseClient = supabase.createClient(supa_url, supa_anon_key);
 
