--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Dashboard</title>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -18,7 +18,6 @@
       background:var(--bg-dark);color:var(--text-light);margin:0;min-height:100vh;
       display:flex;align-items:flex-start;justify-content:center
     }
-    /* consistent page wrapper */
     .container{width:100%;max-width:1200px;padding:24px}
     /* Login */
     #login-section{width:100%;max-width:420px;margin:10vh auto;background:var(--bg-light);padding:24px;border-radius:12px;box-shadow:0 6px 24px rgba(0,0,0,.25)}
@@ -45,7 +44,7 @@
     .nav-tab.active{color:var(--primary);background:var(--bg-light);border-color:var(--border);border-bottom-color:transparent}
     .tab-content{display:none}
     .tab-content.active{display:block}
-    /* Cards / grids (consistent) */
+    /* Cards / grids */
     .stats-grid{
       display:grid;grid-template-columns:repeat(6,minmax(150px,1fr));gap:16px;margin:0 0 16px
     }
@@ -54,7 +53,7 @@
     .stat-card{background:var(--bg-light);padding:16px;border-radius:12px;min-height:110px;display:flex;flex-direction:column;justify-content:space-between}
     .stat-card h3{margin:0;color:var(--text-muted);font-size:.9rem;text-transform:uppercase;letter-spacing:.02em}
     .stat-card .value{font-size:1.8rem;font-weight:800}
-    /* Charts area unified height */
+    /* Charts */
     .charts-grid{
       display:grid;grid-template-columns:2fr 1fr;gap:16px;min-height:360px
     }
@@ -77,7 +76,7 @@
     .sentiment-indicator{padding:2px 6px;border-radius:6px;font-size:.8rem;text-transform:capitalize}
     .sentiment-positive{background:var(--success)}.sentiment-neutral{background:var(--text-muted);color:var(--bg-dark)}.sentiment-negative{background:var(--danger)}
     /* Contacts */
-    .contacts-controls{display:flex;gap:10px;margin:0 0 10px}
+    .contacts-controls{display:flex;gap:10px;margin:0 0 10px;flex-wrap:wrap}
     .contacts-table{width:100%;border-collapse:collapse;background:var(--bg-light);border-radius:12px;overflow:hidden}
     .contacts-table th,.contacts-table td{padding:12px 14px;border-bottom:1px solid var(--border);text-align:left}
     .contacts-table th{color:var(--text-muted)}
@@ -202,7 +201,7 @@
   </section>
 
 <script>
-  // ---- Config (same as your file) ----
+  // ---- Config (your existing project) ----
   const SUPABASE_URL = 'https://okbqkkftdxazdfkiovjj.supabase.co';
   const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9rYnFra2Z0ZHhhemRma2lvdmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxNDUxOTEsImV4cCI6MjA3MDcyMTE5MX0.SvYI1lxJP-dzEK5j1xGNdJu-pNtWEzVm7S2wnQBMY9c';
   const ADMIN_API_BASE = '/.netlify/functions/admin-analytics';
@@ -242,8 +241,6 @@
     if(!json.success) throw new Error(json.error||`API ${action} returned success=false`);
     return json.data;
   }
-
-  // Try several action names to match backend
   async function callWithFallbacks(candidates, payload={}){
     let lastErr;
     for(const a of candidates){
@@ -252,45 +249,70 @@
     }
     throw lastErr||new Error('No matching API action');
   }
+  function escapeHTML(str){ return String(str).replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',\"'\":'&#39;'}[c])); }
 
-  // ---- Auth ----
-  loginForm.addEventListener('submit', async (e)=>{
+  // ---- Auth (fixed) ----
+  async function showDashboard(session){
+    currentSession = session;
+    if (currentSession) {
+      loginSection.style.display = 'none';
+      dashboardSection.style.display = 'block';
+      initializeDashboard();
+    } else {
+      loginSection.style.display = 'block';
+      dashboardSection.style.display = 'none';
+    }
+  }
+
+  loginForm.addEventListener('submit', async (e) => {
     e.preventDefault();
-    errorMessage.textContent='';
-    const email=document.getElementById('email').value.trim();
-    const password=document.getElementById('password').value;
-    if(!email||!password){errorMessage.textContent='Please enter both email and password';return;}
-    try{
-      const {error} = await supabaseClient.auth.signInWithPassword({email,password});
-      if(error){
-        if(error.message.includes('Invalid')) errorMessage.textContent='Invalid email or password.';
-        else if(error.message.includes('confirm')) errorMessage.textContent='Please confirm your email.';
-        else errorMessage.textContent=error.message;
-      }else{
-        loginForm.reset();
+    errorMessage.textContent = '';
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value;
+    if (!email || !password) { errorMessage.textContent = 'Please enter both email and password'; return; }
+
+    try {
+      const { data, error } = await supabaseClient.auth.signInWithPassword({ email, password });
+      if (error) {
+        const msg = (error.message || '').toLowerCase();
+        if (msg.includes('invalid')) errorMessage.textContent = 'Invalid email or password.';
+        else if (msg.includes('confirm')) errorMessage.textContent = 'Please confirm your email before logging in.';
+        else if (msg.includes('disabled')) errorMessage.textContent = 'Password sign-in is disabled for this project.';
+        else errorMessage.textContent = error.message;
+        return;
       }
-    }catch(err){errorMessage.textContent='Network error. Try again.'}
+      if (data?.session) {
+        loginForm.reset();
+        await showDashboard(data.session);
+      } else {
+        errorMessage.textContent = 'Login succeeded but no session was returned.';
+      }
+    } catch (err) {
+      if ((err.message || '').toLowerCase().includes('fetch')) {
+        errorMessage.textContent = 'Network error. Please check your connection and try again.';
+      } else {
+        errorMessage.textContent = err.message || 'Unexpected error during login.';
+      }
+    }
   });
 
-  logoutBtn.addEventListener('click', async ()=>{
-    try{ await supabaseClient.auth.signOut(); }catch{}
-    currentSession=null;
+  logoutBtn.addEventListener('click', async () => {
+    try { await supabaseClient.auth.signOut(); } catch {}
+    currentSession = null;
+    showDashboard(null);
   });
 
-  supabaseClient.auth.onAuthStateChange((event,session)=>{
-    currentSession=session;
-    if(session){ loginSection.style.display='none'; dashboardSection.style.display='block'; initializeDashboard(); }
-    else{ loginSection.style.display='block'; dashboardSection.style.display='none'; }
+  supabaseClient.auth.onAuthStateChange((event, session) => {
+    currentSession = session;
+    showDashboard(session);
   });
 
   // ---- Tabs (fixed: no global event) ----
   function switchTab(btn, tab){
     document.querySelectorAll('.tab-content').forEach(n=>n.classList.remove('active'));
     document.querySelectorAll('.nav-tab').forEach(n=>n.classList.remove('active'));
-    document.getElementById(tab+'-tab')?.classList.add('active'); // if content id matches
+    document.getElementById(tab+'-tab')?.classList.add('active');
     btn.classList.add('active');
-
-    // load data on demand
     if(tab==='overview'){ loadOverviewData(); loadOverviewCharts(); }
     if(tab==='mbti'){ loadMBTIAnalysis(); }
     if(tab==='feedback'){ loadFeedbackAnalysis(); }
@@ -321,7 +343,6 @@
       document.getElementById('satisfaction').textContent='Error';
     }
   }
-
   async function loadOverviewCharts(){
     try{
       conversationsChart?.destroy(); sentimentChart?.destroy();
@@ -344,7 +365,6 @@
         card.innerHTML=`<div class="type">${type}</div><div class="count">${count}</div><div class="percentage">${pct}%</div>`;
         grid.appendChild(card);
       });
-
       mbtiChart?.destroy();
       const ctx=document.getElementById('mbti-chart').getContext('2d');
       mbtiChart=new Chart(ctx,{type:'bar',data:{labels:Object.keys(mbtiData),datasets:[{label:'Count',data:Object.values(mbtiData),backgroundColor:'#8B5CF6'}]},options:{responsive:true,maintainAspectRatio:false,plugins:{legend:{labels:{color:'#f7f5ff'}}},scales:{x:{ticks:{color:'#bdb7e6'}},y:{ticks:{color:'#bdb7e6'}}}});
@@ -418,7 +438,6 @@
     tbody.innerHTML=`<tr><td colspan="5" class="muted-sm">Loading...</td></tr>`;
     try{
       const offset=(contactsPage-1)*CONTACTS_PAGE_SIZE;
-      // support multiple backend action names + shapes
       const result = await callWithFallbacks(['contacts','contact_messages','get_contacts'],{limit:CONTACTS_PAGE_SIZE,offset,search:q});
       const contacts = result.data ?? result.rows ?? result ?? [];
       const total = result.total ?? result.count ?? contacts.length ?? 0;
@@ -440,7 +459,6 @@
       errBox.style.display='block';
     }
   }
-
   function updateContactsPagination(){
     const pageEl=document.getElementById('contacts-page');
     const prevEl=document.getElementById('contacts-prev');
@@ -464,21 +482,21 @@
   function convertToCSV(data,columns){
     const header=columns.join(',');
     const rows=data.map(row=>columns.map(col=>{
-      const v=row[col]; return (typeof v==='string'&&(v.includes(',')||v.includes('\n')))?`"${v.replace(/"/g,'""')}"`:(v??'');
+      const v=row[col]; return (typeof v==='string'&&(v.includes(',')||v.includes('\\n')))?`"${v.replace(/"/g,'""')}"`:(v??'');
     }).join(','));
-    return [header,...rows].join('\n');
+    return [header,...rows].join('\\n');
   }
   function downloadCSV(csv,filename){
     const blob=new Blob([csv],{type:'text/csv'}); const url=URL.createObjectURL(blob);
     const a=document.createElement('a'); a.href=url; a.download=filename; document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
   }
-  function escapeHTML(str){ return String(str).replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
 
   // ---- Boot ----
-  document.addEventListener('DOMContentLoaded',()=>{
+  document.addEventListener('DOMContentLoaded',async ()=>{
     const types=['INTJ','INTP','ENTJ','ENTP','INFJ','INFP','ENFJ','ENFP','ISTJ','ISFJ','ESTJ','ESFJ','ISTP','ISFP','ESTP','ESFP'];
     const sel=document.getElementById('mbti-filter'); types.forEach(t=>{const o=document.createElement('option');o.value=t;o.textContent=t;sel.appendChild(o);});
-    supabaseClient.auth.getSession().then(({data:{session}})=>{currentSession=session;});
+    const { data: { session } } = await supabaseClient.auth.getSession();
+    showDashboard(session);
   });
   setInterval(()=>{ if(dashboardSection.style.display!=='none' && currentSession){ loadOverviewData(); } },300000);
 </script>
