--- a/admin.html
+++ b/admin.html
@@ -162,8 +162,8 @@
 
 <script>
   // ⚠️ IMPORTANT: Replace these with your actual Supabase credentials
-  const SUPABASE_URL = 'YOUR_SUPABASE_URL'; // e.g., 'https://xxxxx.supabase.co'
-  const SUPABASE_ANON_KEY = 'YOUR_SUPABASE_ANON_KEY'; // This is safe to expose in client
+  const SUPABASE_URL = 'https://okbqkkftdxazdfkiovjj.supabase.co'; // e.g., 'https://xxxxx.supabase.co'
+  const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9rYnFra2Z0ZHhhemRma2lvdmpqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxNDUxOTEsImV4cCI6MjA3MDcyMTE5MX0.SvYI1lxJP-dzEK5j1xGNdJu-pNtWEzVm7S2wnQBMY9c'; // This is safe to expose in client
   
   // Initialize Supabase client
   let supabase;
