--- a/index.html
+++ b/index.html
@@ -347,9 +347,11 @@
     </section>
   </main>
 
-  <button class="chat-launch" id="chatOpen" title="Open Mind-Mapper AI">🧠 
-    <b><span data-lang="en">Chat</span><span data-lang="vi">Trò chuyện</span><span data-lang="zh">对话</span></b>
-  </button>
+<button class="chat-launch" id="chatOpen" title="Open Mind-Mapper AI">
+  <img src="mascot.png" alt="Chat Mascot" style="width:42px; height:42px; border-radius:50%;" />
+  <b><span data-lang="en">Chat</span><span data-lang="vi">Trò chuyện</span><span data-lang="zh">对话</span></b>
+</button>
+
 
   <div class="chat-panel" id="chatPanel" aria-live="polite">
     <div class="chat-head">
